--- a/browsercheck.csproj
+++ b/browsercheck.csproj
@@ -52,11 +52,13 @@
     <Content Include="CheckIE\iejsset.jpg" />
     <Content Include="CheckIE\iepopupset.jpg" />
     <Content Include="CheckIE\ietrustwebsiteset.jpg" />
+    <Content Include="config.js" />
     <Content Include="ky\app.html" />
     <Content Include="BrowerCheck.html" />
     <Content Include="BrowerCheckClose.html" />
     <Content Include="CheckIE\ieadjust.jpg" />
     <Content Include="ky\proxy.html" />
+    <Content Include="readme.txt" />
     <Content Include="Scripts\jquery-1.7.1.intellisense.js" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
