1、受信站点自动修正测试器配置；2、文件名称修正；3、全局变量Sys

--- a/browsercheck.csproj
+++ b/browsercheck.csproj
@@ -64,16 +64,17 @@
     <Content Include="CheckIE\ietrustwebsiteset.jpg" />
     <Content Include="CheckIE\msdi_setting.gif" />
     <Content Include="config.js" />
+    <Content Include="index.html" />
     <Content Include="ky\app.html" />
-    <Content Include="BrowerCheck.html" />
-    <Content Include="BrowerCheckClose.html" />
+    <Content Include="BrowserCheck.html" />
+    <Content Include="BrowserCheckClose.html" />
     <Content Include="CheckIE\ieadjust.jpg" />
     <Content Include="ky\proxy.html" />
     <Content Include="proxy.html" />
     <Content Include="readme.txt" />
     <Content Include="Scripts\jquery-1.7.1.intellisense.js" />
     <Content Include="Scripts\jquery-1.7.1.js" />
-    <Content Include="ky\othersite\BrowerCheckClose.html" />
+    <Content Include="ky\othersite\BrowserCheckClose.html" />
     <Content Include="ky\othersite\check.html" />
     <Content Include="Scripts\jquery.cookie.js" />
     <Content Include="Scripts\jquery.ua.js" />
